[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a",
]

[tool.uv.sources]
a = { git = "https://demo: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@github.com/alfman99/private-repo-a.git" }
