[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a",
]

[tool.uv.sources]
a = { git = "https://demo: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@github.com/alfman99/private-repo-a.git" }
